--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dot = "0.1.4"
 indicatif = "0.17.7"
 regex = "1.10.2"
 reqwest = { version = "0.11.22", default-features = false, features = [
